updated page css for body and footer to fix tooltips not moving when scrolling on mobile for example

--- a/smitenoobleague-web-app/src/styles/globals.css
+++ b/smitenoobleague-web-app/src/styles/globals.css
@@ -54,12 +54,13 @@ html {
 }
 
 body {
+  position: relative;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
